// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-result-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "EejgXD4itDHQkcSB+rkduaK6i3w=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sKeQkO8VgbsjZXr6tkSU30MvP5c=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "t6duZ5rxbz3SLUqdrIqq4VHyjIg=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "2evDFbkt/cgRlemoW1E66Nz3gwU=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "I+1b5N1kyPbt/73pkZi5tRoAt68=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "xP4FebG8AhkGm5G5892sV4YgrI4=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "4UIiWSYxKT2VTWmAK9c/rIz67Ic=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "iINA1F5HMIks1IEPIRrC2AysYzA=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
          ],
          "hash": "lrp2Xab0TGxM0Z8erCN+qHUWa8g=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "kSkE9svaQiOKxwJHLZ7Y3FTcz9A=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "JwObClrJZkJOZA5i3Ink67a8Tdo=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-result-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XeOqPM915mDMjdXlpwfGAW4Amlg=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "DHc1UOzcvrRyRP7cNfkhee0USQE=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "bBaaDceapg0y5AjIvm6Qiia9piQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "74fAJXNYJqMPcYeW246hU8LXEhQ=",
              "name": "atomic-nohypen",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
          ],
          "hash": "IZsxEfO2Xcui01OLWXJGtYNRxT0=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "mTXjbcCLQ9EWBELtPOF9/wtTLNc=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "M2BG4vcOnMkZ6elD1dV0L2x2ADw=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "V2ZzdpmKe/vTP80ZuWB5klfvIqc=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "ShFXwot8XbCjD/A7x/1LQ0+hYI4=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "pFuu6S9wb+y09faE9Lxub6t+cfY=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "I9VHSwITpu3GkClQA99C6kJ53Sk=",
              "name": "valid-component-name",
            },
          ],
          "hash": "RWs1u+T5Dy0Wx/6v3REccRDrGcs=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "EGoc/lbKGlRLUrixFw5Gmceexew=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "+piWqrQH+EEHWodYMvIUhVflYK0=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "AFaXsMmUy2KkPr4Lcy8m3oBJ9J8=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "sample-result-component.css",
                    },
                    HashedFile {
                      "hash": "DMYROzP/GYB/aoia+R5JUflx37w=",
                      "name": "sample-result-component.tsx",
                    },
                  ],
                  "hash": "zQmeniXwoag2rYtOWGtLO1oiwlQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "jXvgdZFD3mcTWQG9yI5DvU5Nq7g=",
              "name": "sample-result-component",
            },
          ],
          "hash": "ETdt81RYPDiJbUKEhjEI/WaQE0A=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "IOukLRebZFdpqb7hZhcnfZiHBW0=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "tTVOjauC78szXJBlphk3ecY5Pwg=",
  "name": "no-args",
}
`;
